frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: pnt-quiz
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       # Port exposed by the Service
      targetPort: 80 # Port where the container listens
  type: ClusterIP    # Default type of Service
